# cpp-gtest-example

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md
cpr_repo-prefix/src/cpr_repo-stamp/: cpr_repo-gitinfo.txt
cpr_repo-prefix/tmp/: cpr_repo-cfgcmd.txt  cpr_repo-gitclone.cmake  cpr_repo-gitupdate.cmake  cpr_repo-mkdirs.cmake
googletest_repo-prefix/src/googletest_repo-stamp/: googletest_repo-gitinfo.txt
googletest_repo-prefix/tmp/: googletest_repo-cfgcmd.txt  googletest_repo-gitclone.cmake  googletest_repo-gitupdate.cmake  googletest_repo-mkdirs.cmake
src/02-tree/: Tree.cpp
src/03-weather/: Weather.cpp
tests/01-simple-library/: AddTestCase.cpp  LeapTestCase.cpp
tests/02-tree/: TreeTestCase.cpp  TreeTestCase.h
tests/03-weather/: WeatherMock.h  WeatherTestCase.cpp  WeatherTestCase.h
